override_macro_tests/src/compile_errors/e06_override_with_trait_conflict.stderr
error: custom attribute panicked
  --> src/compile_errors/e06_override_with_trait_conflict.rs:25:1
   |
25 | #[override_with(Trait06B)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: There are multiple traits matching with: Trait06B

error: custom attribute panicked
  --> src/compile_errors/e06_override_with_trait_conflict.rs:31:1
   |
31 | #[override_with(Trait06A)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: There are multiple traits matching with: Trait06C
